# wxWidgets

./: .cproject  .gitignore  .project  CMakeLists.txt  configure  configure.in  files_adv.cmake  files_aui.cmake  files_base.cmake  files_core.cmake  files_gl.cmake  files_html.cmake  files_resources.cmake  files_xml.cmake  files_xrc.cmake  wxrc.patch
include/wx/: setup.h.cmake
include/wx/msw/: region.h
src/common/: anidecod.cpp  imagpng.cpp
src/expat/: CMakeLists.txt  expat_config.h.cmake
src/expat/lib/: xmlparse.c
src/expat_old/: CMakeLists.txt  ConfigureChecks.cmake
src/generic/: aboutdlgg.cpp
src/msw/: fontenum.cpp  treectrl.cpp  window.cpp
src/msw/rt/: notifmsgrt.cpp
src/regex/: CMakeLists.txt
utils/wxrc/: CMakeLists.txt  wxrc.cpp
